fix mobile layout clipping

--- a/public_html/_assets/stylesheets/blog_index.css
+++ b/public_html/_assets/stylesheets/blog_index.css
@@ -371,7 +371,8 @@ iframe {
   }
   header {
     position: static;
-    max-width: none;
+    max-width: 95vw;
+    margin: auto;
   }
   main {
     margin-top: 5%;
