--- a/resources/scss/about/about.scss
+++ b/resources/scss/about/about.scss
@@ -6,6 +6,7 @@
 @use '../_shared/components/webkit_scrollbar' as *;
 
 @use '_screen-sizes/768' as *;
+@use '_screen-sizes/1100' as *;
 
 header, main, footer {
   @include fadeIn();
@@ -215,6 +216,7 @@ article {
 }
 
 #contact {
+  padding-bottom: 1em;
   ul {
     columns: 2;
     margin-left: 1em;
@@ -318,6 +320,7 @@ button {
   color: black;
 }
 
-@include webkit-scrollbar-style-1();
+@include webkit-scrollbar-style-1;
 
-@include screen-768();
+@include screen-1100;
+@include screen-768;
