--- a/resources/scss/blog/index/_screen-sizes/_768.scss
+++ b/resources/scss/blog/index/_screen-sizes/_768.scss
@@ -12,7 +12,8 @@
         @include header-style-2-768();
         header {
             position: static;
-            max-width: none;
+            max-width: 95vw;
+            margin: auto;
         }
 
         main {
