--- a/resources/scss/blog/notes/_screen-sizes/_index_768.scss
+++ b/resources/scss/blog/notes/_screen-sizes/_index_768.scss
@@ -11,9 +11,9 @@
         @include header-style-2-768();
         header {
             position: static;
-            max-width: none;
+            max-width: 95vw;
+            margin: auto;
         }
-
         main {
             margin-top: 5%;
             width: 100%;
@@ -27,6 +27,25 @@
         }
         .notes-format {
             flex-direction: column;
+            header {
+                margin-left: 3vw;
+                margin-bottom: 3vh;
+                display: flex;
+                align-items: center;
+                .u-photo {
+                    margin-bottom: 0;
+                }
+                hgroup {
+                    p {
+                        margin-bottom: 0;
+                    }
+                }
+                .id {
+                    margin-top: 0;
+                    border-top: none;
+                    padding-top: 0;
+                }
+            }
             .h-entry {
                 border-left: none;
                 border-right: none;
@@ -38,11 +57,6 @@
                 width: fit-content;
             }
         }
-        
-        h2, .u-photo {
-            margin-left: 1em;
-        }
-        
         footer {            
             width: 80%;
             max-width: 100vw;
